--- a/templates/member/Mypage.html
+++ b/templates/member/Mypage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mypage</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'Mypage.css' %}">
 </head>
@@ -23,22 +23,17 @@
   <!-- 메인 컨텐츠 박스 시작 -->
   <main class="main-box flex-grow-1 visible-md-up">
     <section class="main-box-section con">
-
+      <aside class="sidebar">
+        {% include 'newnav.html' %}
+      </aside>
 
       <!-- 회원정보 페이지 시작 -->
       <div class="section-MyPage min-height-50vh flex flex-jc-c flex-ai-c ">
           {{error_message}}
         <form action="/member/mypage" method="POST">
             {% csrf_token %}
-<!--          form 에 들어갈 것 onsubmit="check(this); return false;"-->
           <div class="section-MyPage-body flex flex-jc-c flex-ai-c">
             <div class="section-MyPage-body__cell">
-<!--              <div class="MyPage_cell__title">-->
-<!--                <span>회원번호</span>-->
-<!--                <div class="MyPage_cell__body">-->
-<!--                  <span>{{mypage.id}}</span>-->
-<!--                </div>-->
-<!--              </div>-->
               <div class="MyPage_cell__title">
                 <span>회원ID</span>
                 <div class="MyPage_cell__body">
@@ -57,12 +52,6 @@
                   <input type="password" maxlength="50" placeholder="PW 확인">
                 </div>
               </div>
-              <div class=MyPage_cell__title>
-                <span>내가 작성한 글</span>
-                <div class=MyPage_cell__body>
-                  <button class="submitModifyBtn btn btn-go" type="button" onclick="location.href='{% url 'list' %}'">확인하기</button>
-                </div>
-              </div>
             </div>
             <div class="section-MyPage-body__cell">
               <div class="MyPage_cell__title">
@@ -77,36 +66,14 @@
                   <input type="email" name="email" value="{{user.email}}">
                 </div>
               </div>
-<!--              <div class=MyPage_cell__title>-->
-<!--                <span>연락처</span>-->
-<!--                <div class=MyPage_cell__body>-->
-<!--                  <input type="number" name="cellphoneNo" value="${loginedMember.cellphoneNo}">-->
-<!--                </div>-->
-<!--              </div>-->
               <div class=MyPage_cell__title>
                 <span>회원가입일</span>
                 <div class=MyPage_cell__body>
                   <span>{{user.date_joined}}</span>
                 </div>
               </div>
-              <div class=MyPage_cell__title>
-                <span>회원탈퇴</span>
-                <div class=MyPage_cell__body>
-                  <div class=MyPage_cell__body>
-                   <form method="post" >
-                      {% csrf_token %}
-                      <p>정말 탈퇴하시겠습니까?</p>
-                      <button class="cleModifyBtn btn btn-back" type="button" onclick="location.href='{% url 'delete' %}'">회원 탈퇴</button>
-                   </form>
-                  </div>
-                </div>
-              </div>
-              <div>
-
-              </div>
               <div class="section-MyPage-body__option flex flex-jc-fe flex-ai-fe">
                 <button class="submitModifyBtn btn btn-go" type="submit" ><i class="far fa-edit"></i> 변경</button>
-<!--                 button 에 들어갈 것 onclick="if(confirm('정말 변경하시겠습니까?') == false) {return false;}"-->
                 <button class="cleModifyBtn btn btn-back" type="button" onclick="history.back();"><i class="fas fa-undo"></i> 취소</button>
               </div>
             </div>
