자잘한 수정

--- a/templates/board/update.html
+++ b/templates/board/update.html
@@ -37,9 +37,10 @@
                     <dl>
                         <dt>모자이크 형식</dt>
                         <dd>
-                            <input type="radio" name="type" value="harr" checked>기본 모자이크
+                            <input type="radio" name="type" value="harr" checked>모자이크
+                            <input type="radio" name="type" value="jia">land_mosaic
                             <input type="radio" name="type" value="shuffle">이미지 섞기
-                            <input type="radio" name="type" value="faceShuffle">얼굴 섞기
+<!--                            <input type="radio" name="type" value="faceShuffle">얼굴 섞기-->
                         </dd>
                     </dl>
                 </div>
