--- a/templates/board/read.html
+++ b/templates/board/read.html
@@ -43,18 +43,18 @@
                 <div class="cont">
                     <img src="{{mos.mos_down.url}}"> <br>
                     {{board.board_content}}<br>
-                        {{error_message}}
+                    {{error_message}}
                 </div>
                 <div class="cont">
                     <a href="{% url 'mosaic_download' mos.mos_no %}" download><button> 파일 다운로드</button></a>
-
                 </div>
-            </div>
-            <div class="bt_wrap">
-                <a href="{% url 'list' %}" class="on">목록</a>
-                <a href="{% url 'update' board.board_no %}">수정</a>
-                <a href="{% url 'delete' board.board_no %}" class="off">삭제</a>
-            </div>
+                <div class="bt_wrap">
+                    <a href="{% url 'list' %}" class="on">목록</a>
+                    {% if user == board.member %}
+                        <a href="{% url 'update' board.board_no %}">수정</a>
+                        <a href="{% url 'delete' board.board_no %}" class="off">삭제</a>
+                    {% endif %}
+                </div>
         </div>
     </div>
 
