--- a/templates/index.html
+++ b/templates/index.html
@@ -25,29 +25,29 @@
         <p>여러분들이 직접 저희 사이트를 이용해서 사진에 모자이크 처리를 할수있으며 </p>
         <p>또한 모자이크 처리된 사진을 다운로드 받으실 수 있습니다.</p>
 
-<footer>
-    <nav>
-        <div>
-            <ul class="pagination">
-              <li class="page-item disabled">
-                <a class="page-link" href="#">&laquo;</a>
-              </li>
-              <li class="page-item active">
-                <a class="page-link" href="#">1</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#">2</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#">3</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#">&raquo;</a>
-              </li>
-            </ul>
-          </div>
-    </nav>
-</footer>
+<!--<footer>-->
+<!--    <nav>-->
+<!--        <div>-->
+<!--            <ul class="pagination">-->
+<!--              <li class="page-item disabled">-->
+<!--                <a class="page-link" href="#">&laquo;</a>-->
+<!--              </li>-->
+<!--              <li class="page-item active">-->
+<!--                <a class="page-link" href="#">1</a>-->
+<!--              </li>-->
+<!--              <li class="page-item">-->
+<!--                <a class="page-link" href="#">2</a>-->
+<!--              </li>-->
+<!--              <li class="page-item">-->
+<!--                <a class="page-link" href="#">3</a>-->
+<!--              </li>-->
+<!--              <li class="page-item">-->
+<!--                <a class="page-link" href="#">&raquo;</a>-->
+<!--              </li>-->
+<!--            </ul>-->
+<!--          </div>-->
+<!--    </nav>-->
+<!--</footer>-->
 {% block content %}
 {% endblock %}
 </body>
