--- a/templates/member/delete.html
+++ b/templates/member/delete.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>회원탈퇴</title>
 </head>
 <body>
   <form method="post" action="{% url 'delete' %}">
